# rules_scala_native

./: .bazelignore  .bazelrc  .gitignore  BUILD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  README.md  test.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: publish.yaml
docs/internal/: testing-strategy.md
examples/: .bazelrc  BUILD  Greetings.scala  HelloNative.scala  Intrinsics.scala  MODULE.bazel  README.md  c_greetings.c
examples/01-basics/: README.md
examples/01-basics/00-bazel-setup/: BUILD.bazel  MODULE.bazel  README.md
examples/01-basics/01-hello-world/: BUILD.bazel  MODULE.bazel  README.md
examples/01-basics/02-transitive-dependencies/: .bazelrc  BUILD.bazel  MODULE.bazel  PrettyPrinter.scala  README.md
examples/01-basics/02-transitive-dependencies/core/: BUILD.bazel  CharOperations.scala
examples/01-basics/02-transitive-dependencies/services/: BUILD.bazel  Formatter.scala
examples/01-basics/03-testing/: BUILD.bazel  MODULE.bazel  Palindrome.scala  PalindromeTest.scala  README.md
examples/01-basics/05-static-and-dynamic-libraries/: README.md
examples/02-scala-native-features/: README.md  REAEME.md
examples/02-scala-native-features/01-zone-allocator/: BUILD.bazel  MODULE.bazel  README.md  ZoneExample.scala
examples/02-scala-native-features/02-pointers/: BUILD.bazel  MODULE.bazel  PointerOps.scala  README.md
examples/02-scala-native-features/03-c-structs/: BUILD.bazel  Coordinate.scala  MODULE.bazel  README.md
examples/02-scala-native-features/04-posix-bindings/: BUILD.bazel  FileStats.scala  MODULE.bazel  README.md
examples/02-scala-native-features/05-intrinsics/: BUILD.bazel  Intrinsics.scala  MODULE.bazel  README.md
examples/03-interop/: README.md
examples/03-interop/01-c-basic/: Adder.scala  BUILD.bazel  MODULE.bazel  README.md
examples/03-interop/02-c-structs-and-strings/: BUILD.bazel  CGreeter.scala  MODULE.bazel  README.md  greeter.c
examples/03-interop/03-c-advanced/: BUILD.bazel  Callbacks.scala  MODULE.bazel  README.md  callbacks.c
examples/03-interop/04-cpp/: BUILD.bazel  CppInterop.scala  MODULE.bazel  README.md  output.txt
examples/03-interop/05-rust/: .bazelrc  Adder.scala  BUILD.bazel  MODULE.bazel  README.md
examples/03-interop/06-zig/: Adder.scala  BUILD.bazel  MODULE.bazel  README.md
examples/04-cross-compile/: README.md
examples/04-cross-compile/01-cross-compile-hello-world/: Greetings.scala  MODULE.bazel  README.md
examples/04-cross-compile/01-hello-world/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
examples/04-cross-compile/02-cross-compile-with-musl/: Greetings.scala  MODULE.bazel  README.md
examples/04-cross-compile/03-cross-compile-with-glibc/: BUILD.bazel  Greetings.scala  MODULE.bazel  README.md
examples/04-cross-compile/04-cross-compile-dependencies/: BUILD.bazel  MODULE.bazel  README.md
examples/04-cross-compile/04-cross-compile-dependencies/src/main/scala/: Main.scala  WiringPi.scala
examples/basic/: BUILD.bazel  HelloNative.scala  NativeTest.scala  README.md
examples/features/: BUILD.bazel  Posix.scala  README.md  Struct.scala  ZoneAlloc.scala
examples/interop/c/: AdvancedC.scala  BUILD.bazel  README.md  advanced_c.c
examples/interop/cpp/: BUILD.bazel  CppInterop.scala  README.md  cpp_greeter.cpp
examples/interop/rust/: BUILD.bazel  README.md  RustInterop.scala
examples/interop/zig/: BUILD.bazel  README.md  ZigInterop.scala
scala_native/: BUILD  scala_native_binary.bzl  scala_native_test.bzl  scala_native_toolchain.bzl
scala_native/extensions/: BUILD  deps.bzl
scala_native/private/linker/: BUILD  NativeLinker.scala
scala_native/private/rules/: BUILD  scala_native_binary.bzl  scala_native_library.bzl  target_triple.bzl
tests/cross-compile/: examples.sh
tests/e2e/: BUILD.bazel
tests/e2e/examples/: complie-examples.sh
tests/unit/: BUILD.bazel  providers_test.bzl  target_triple_test.bzl
