load(
    "@rules_scala_native//scala_native:scala_native_library.bzl",
    "scala_native_library",
)
load(
    "@rules_scala_native//scala_native:scala_native_binary.bzl",
    "scala_native_binary",
)
load(
    "@rules_cc//cc:defs.bzl",
    "cc_library",
)
load(
    "@rules_scala_native//scala_native:scala_native_test.bzl",
    "scala_native_test",
)

scala_native_library(
    name = "greetings",
    srcs = ["Greetings.scala"],
)

scala_native_library(
    name = "hello_native",
    srcs = [
        "HelloNative.scala",
    ],
    deps = [
        ":greetings",
    ],
)

cc_library(
    name = "c_greetings",
    srcs = ["c_greetings.c"],
)

scala_native_binary(
    name = "hello_native_bin",
    main_class = "examples.native.sayHello",
    deps = [
        ":hello_native",
        ":c_greetings",
    ],
)

scala_native_test(
    name = "my_native_test",
    srcs = ["NativeTest.scala"],
    suites = ["examples.basic.NativeTest"],
)
