load(
    "@rules_scala_native//scala_native:scala_native_library.bzl",
    "scala_native_library",
)
load(
    "@rules_scala_native//scala_native:scala_native_binary.bzl",
    "scala_native_binary",
)

scala_native_library(
    name = "intrinsics",
    srcs = [
        "Intrinsics.scala",
    ],
)

scala_native_library(
    name = "zone_alloc_scala",
    srcs = ["ZoneAlloc.scala"],
)

scala_native_binary(
    name = "zone_alloc_bin",
    main_class = "examples.features.zoneAllocExample",
    deps = [":zone_alloc_scala"],
)

scala_native_library(
    name = "struct_scala",
    srcs = ["Struct.scala"],
)

scala_native_binary(
    name = "struct_bin",
    main_class = "examples.features.structExample",
    deps = [":struct_scala"],
)

scala_native_library(
    name = "posix_scala",
    srcs = ["Posix.scala"],
)

scala_native_binary(
    name = "posix_bin",
    main_class = "examples.features.posixExample",
    deps = [":posix_scala"],
)
