# NOTE: cc_library is required for compiling C (or C++).
load(
    "@rules_cc//cc:cc_library.bzl",
    "cc_library",
)
load(
    "@rules_scala_native//scala_native:scala_native_binary.bzl",
    "scala_native_binary",
)
load(
    "@rules_scala_native//scala_native:scala_native_library.bzl",
    "scala_native_library",
)

cc_library(
    name = "cpp_greeter_lib",
    srcs = ["cpp_greeter.cpp"],
)

scala_native_library(
    name = "scala_cpp_interop",
    srcs = ["CppInterop.scala"],
)

scala_native_binary(
    name = "main",
    main_class = "examples.cppInteropExample",
    deps = [
        ":cpp_greeter_lib", # Link the C++ code implementation
        ":scala_cpp_interop",
    ],
)
