"""
Test rulesets for Scala Native work as expected as a standalone module.
"""

module(name = "scala_native_example")

bazel_dep(
    name = "protobuf",
    version = "33.4",
)
bazel_dep(
    name = "rules_scala",
    version = "7.2.2",
)
bazel_dep(
    name = "rules_scala_native",
    version = "0.1.0",
)
bazel_dep(
    name = "rules_zig",
    version = "0.12.3",
)

local_path_override(
    module_name = "rules_scala_native",
    path = "../../..",
)

bazel_dep(
    name = "toolchains_llvm_bootstrapped",
    version = "0.5.9",
)

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
)

zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.toolchain(zig_version = "0.14.1")
use_repo(zig, "zig_toolchains")

register_toolchains("@zig_toolchains//:all")

########################## Configure Scala ####################################
scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = "3.8.1")
use_repo(scala_config, "rules_scala_config")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.scala()
use_repo(scala_deps, "rules_scala_toolchains")

scala_native_deps = use_extension(
    "@rules_scala_native//scala_native/extensions:deps.bzl",
    "scala_native_deps",
)
use_repo(
    scala_native_deps,
    "org_junit_junit",
    "org_scala_native_auxlib",
    "org_scala_native_clib",
    "org_scala_native_javalib",
    "org_scala_native_junit_plugin",
    "org_scala_native_junit_runtime",
    "org_scala_native_nativelib",
    "org_scala_native_nir",
    "org_scala_native_nscplugin",
    "org_scala_native_posixlib",
    "org_scala_native_scalalib",
    "org_scala_native_test_interface",
    "org_scala_native_test_interface_sbt_defs",
    "org_scala_native_tools",
    "org_scala_native_util",
    "org_scala_native_windowslib",
)

register_toolchains(
    "@rules_scala_toolchains//...:all",
)
