module(name = "example_04_cross_compile_dependencies")

bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_scala", version = "7.2.2")
bazel_dep(name = "rules_scala_native", version = "0.1.0")
bazel_dep(name = "llvm", version = "0.6.1")

# Required to build the WiringPi library with GNU make
bazel_dep(name = "rules_foreign_cc", version = "0.15.1", dev_dependency = True)

local_path_override(
    module_name = "rules_scala_native",
    path = "../../..",
)

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

# Instruct Bazel where to find the WiringPi source
http_archive(
    name = "wiringpi",
    build_file = "//third_party:wiringpi.BUILD.bazel",
    patch_cmds = [],
    sha256 = "c7a06c462372df1650219a10cdd4e8e1da763a41399539ecd1ee1dd4e14e09a8",
    strip_prefix = "WiringPi-3.18",
    urls = ["https://github.com/WiringPi/WiringPi/archive/refs/tags/3.18.tar.gz"],
)

# Configure Scala
scala_config = use_extension("@rules_scala//scala/extensions:config.bzl", "scala_config")
scala_config.settings(scala_version = "3.8.1")

scala_deps = use_extension("@rules_scala//scala/extensions:deps.bzl", "scala_deps")
scala_deps.scala()
use_repo(scala_deps, "rules_scala_toolchains")

# Configure Scala Native
scala_native_deps = use_extension("@rules_scala_native//scala_native/extensions:deps.bzl", "scala_native_deps")
use_repo(
    scala_native_deps,
    "org_scala_native_auxlib",
    "org_scala_native_clib",
    "org_scala_native_javalib",
    "org_scala_native_nativelib",
    "org_scala_native_nir",
    "org_scala_native_nscplugin",
    "org_scala_native_posixlib",
    "org_scala_native_scalalib",
    "org_scala_native_tools",
    "org_scala_native_util",
    "org_scala_native_windowslib",
)

register_toolchains(
    "@llvm//toolchain:all",
    "@rules_foreign_cc//toolchains:preinstalled_make_toolchain",
    "@rules_scala_toolchains//...:all",
)
