load(
    "@rules_scala_native//scala_native:scala_native_library.bzl",
    "scala_native_library",
)
load(
    "@rules_scala_native//scala_native:scala_native_binary.bzl",
    "scala_native_binary",
)
load(
    "@rules_cc//cc:defs.bzl",
    "cc_library",
)

cc_library(
    name = "advanced_c_lib",
    srcs = ["advanced_c.c"],
)

scala_native_library(
    name = "advanced_c_scala",
    srcs = ["AdvancedC.scala"],
)

scala_native_binary(
    name = "advanced_c_bin",
    main_class = "examples.interop.c.advancedCExample",
    deps = [
        ":advanced_c_scala",
        ":advanced_c_lib",
    ],
)
