load(
    "@rules_scala_native//scala_native:scala_native_library.bzl",
    "scala_native_library",
)
load(
    "@rules_scala_native//scala_native:scala_native_binary.bzl",
    "scala_native_binary",
)
load(
    "@rules_cc//cc:defs.bzl",
    "cc_library",
)

cc_library(
    name = "cpp_greeter_lib",
    srcs = ["cpp_greeter.cpp"],
)

scala_native_library(
    name = "cpp_interop_scala",
    srcs = ["CppInterop.scala"],
)

scala_native_binary(
    name = "cpp_interop_bin",
    main_class = "examples.interop.cpp.cppInteropExample",
    deps = [
        ":cpp_interop_scala",
        ":cpp_greeter_lib",
    ],
)
